Add User, Department, Role, and related entities
Added new entity classes for User, Department, Role, etc., along with their respective repositories and services. This includes mapping configurations using MapStruct and updates to the project dependencies and front-end components for user authentication and registration.

--- a/watcher_client/src/pages/Login.scss
+++ b/watcher_client/src/pages/Login.scss
@@ -1,9 +1,21 @@
-.login-row {
-  .login-col {
-    .login-tabs {
-      width: 100%;
+.login-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
 
-      li {
+  .login-row {
+    width: 100%;
+
+    .login-col {
+      .error-text {
+        display: block;
+        margin-bottom: 0.5rem;
+      }
+
+      .formButton {
+        display: block;
+        margin: 0 auto;
         width: 50%;
       }
     }
