--- a/watcher_client/src/pages/Home.scss
+++ b/watcher_client/src/pages/Home.scss
@@ -6,6 +6,23 @@
     position: relative;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
+    .icon-wrapper {
+      position: relative;
+      display: inline-block;
+
+      .icon-badge {
+        position: absolute;
+        top: -5px;
+        right: -10px;
+        background-color: red;
+        color: white;
+        border-radius: 50%;
+        padding: 2px 6px;
+        font-size: 12px;
+        line-height: 1;
+      }
+    }
+
     .avatar-image {
       border: 2px solid aliceblue;
       box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
