--- a/watcher_client/src/pages/TicketManage.scss
+++ b/watcher_client/src/pages/TicketManage.scss
@@ -1,4 +1,4 @@
-.user-manage-container {
+.ticket-manage-container {
   position: relative;
 
   .add-button {
@@ -30,7 +30,6 @@
   width: 400px;
   height: 100%;
   z-index: 1000;
-  overflow-y: auto;
 
   .checkbox-group {
     margin-top: 1rem;
