--- a/watcher_client/src/pages/AnnounceManage.scss
+++ b/watcher_client/src/pages/AnnounceManage.scss
@@ -26,7 +26,7 @@
 .right-panel {
   background-color: white;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  padding: 56px 20px 20px;
   width: 400px;
   height: 100%;
   z-index: 1000;
